add privilege list to UserDetailsImpl